# operar_marketdata_fetch

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
Requirements/: DatabaseDesign.md  DatabaseProposal.md  DesktopInterface.md  FetchData.md  Login.md  ModulesDesign.md  Posiciones.md  WebInterface.md  algorithms.md  database_design.md  database_schema.puml  desktop_interface_wireframe.md  fetch_data_population.md  mannaging_operartions_positions.md  marketdata_database_design.md  modules_design.md  optimization_algorithm.md  populating_market_data.md  profit_loss.md  response_example.json  schema.puml  table_views.md  use_cases.md  views.md
data/: GGAL_option_chain_2025-12-04.csv
docs/: index.md
docs/api_reference/: database.md  fetch_data.md  main.md  pnl.md
docs/commands/: cli_usage.md  fetch.md  strategy.md
docs/proposals/: parallel_fetch_history.md
notebooks/: strategy.ipynb
propmpts/: algorithms.md  create_tables.sql  document_software.md  modules_design.md  pop_md_from_historical_prices.md  pop_md_with_fetch_contract.md  profit_loss.md  serie_historica_db.md  use_cases.md
src/: database.py  desktop_interface.py  fetch_data.py  interface.py  login.py  main.py  pnl.py  type_definitions.py
tests/: test_database.py  test_fetch_data.py  test_login.py  test_pnl.py  test_prices.py  test_remove_trade.py
